--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@mui/material": "^5.15.6",
     "@mui/styled-engine-sc": "^6.0.0-alpha.4",
     "@mui/x-data-grid": "^6.19.1",
+    "@mui/x-date-pickers": "^6.19.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "material-ui-popup-state": "^5.0.10",
     "moment": "^2.29.4",
     "react": "^18.2.0",
